created an html page to add students and marks

--- a/staff Dashboard/staff.html
+++ b/staff Dashboard/staff.html
@@ -23,7 +23,7 @@
     <div class="container">
         <div class="button-container mb-3">
             <button class="btn btn-success" onclick="location.href='addStudent.html'">Add New Student</button>
-            <button class="btn btn-purple">Add Marks</button>
+            <button class="btn btn-purple"onclick="location.href='addMarks.html'">Add Marks</button>
             <button class="btn btn-warning" onclick="window.location.href='viewAppointments.html'">Add New Admin</button>
         </div>
     </div>
