--- a/staff Dashboard/staff.html
+++ b/staff Dashboard/staff.html
@@ -14,7 +14,7 @@
     <div class="container-fluid d-flex justify-content-between align-items-center mb-3">
         <h2 class="fw-bold">Staff Dashboard</h2>
         <div>
-            <button class="btn btn-primary me-2">Update Login</button>
+            <button class="btn btn-primary me-2" data-bs-toggle="modal" data-bs-target="#updateLoginModal">Update Login</button>
             <button class="btn btn-danger">Logout</button>
         </div>
     </div>
@@ -23,8 +23,9 @@
     <div class="container">
         <div class="button-container mb-3">
             <button class="btn btn-success" onclick="location.href='addStudent.html'">Add New Student</button>
-            <button class="btn btn-purple"onclick="location.href='addMarks.html'">Add Marks</button>
-            <button class="btn btn-warning" onclick="window.location.href='viewAppointments.html'">Add New Admin</button>
+            <button class="btn btn-purple" onclick="location.href='addMarks.html'">Add Marks</button>
+           
+            
         </div>
     </div>
 
@@ -62,10 +63,57 @@
         </table>
     </div>
 
-    <script src="app.js"></script>
+    <!-- Update Login Modal -->
+    <div class="modal fade" id="updateLoginModal" tabindex="-1" aria-labelledby="updateLoginModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="updateLoginModalLabel">Update Login Credentials</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="mb-3">
+                        <label for="newPassword" class="form-label font-weight-bold">New Password</label>
 
-    <footer class="text-center mt-4 text-muted">
-        <p>&copy; 2025 Channel Your Doctor. All rights reserved.</p>
-    </footer>
+                        <input type="password" class="form-control" id="newPassword" placeholder="Enter new password">
+                    </div>
+                    <div class="mb-3">
+                        <label for="confirmPassword" class="form-label font-weight-bold">Confirm Password</label>
+                        <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm new password">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-success" onclick="updatePassword()">Update Password</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="app.js"></script>
+    <script>
+        // Placeholder function for updating the password
+        function updatePassword() {
+            const newPassword = document.getElementById('newPassword').value;
+            const confirmPassword = document.getElementById('confirmPassword').value;
+
+            if (newPassword === confirmPassword) {
+                // Logic to update the password (e.g., AJAX request to the server)
+                alert('Password updated successfully!');
+                // Reset form fields
+                document.getElementById('newPassword').value = '';
+                document.getElementById('confirmPassword').value = '';
+                // Close modal
+                const modal = bootstrap.Modal.getInstance(document.getElementById('updateLoginModal'));
+                modal.hide();
+            } else {
+                alert('Passwords do not match. Please try again.');
+            }
+        }
+    </script>
+
+   
+
 </body>
 </html>
