--- a/staff Dashboard/addStudent.html
+++ b/staff Dashboard/addStudent.html
@@ -37,7 +37,7 @@
             </div>
         </header>
         
-        <form id="student-form" method="POST" action="">
+        <form id="student-form" method="POST" action="add_student.php">
             <div class="form-group">
                 <label for="index">Index Number:</label>
                 <div class="input-group">
