created a landing page

--- a/staff Dashboard/staff.html
+++ b/staff Dashboard/staff.html
@@ -24,6 +24,8 @@
         <div class="button-container mb-3">
             <button class="btn btn-success" onclick="location.href='addStudent.html'">Add New Student</button>
             <button class="btn btn-purple" onclick="location.href='addMarks.html'">Add Marks</button>
+            <button style="background-color: yellow; color: black; border: black; padding: 10px 20px; cursor: pointer;" onclick="location.href='addMarks.html'">View Marks</button>
+
            
             
         </div>
@@ -48,9 +50,8 @@
             <thead class="table-primary">
                 <tr>
                     <th>Index No</th>
-                    <th>Student Name</th>
-                    <th>Class</th>
-                    <th>Marks</th>
+                    <th>Subject</th>
+                    <th>Mark</th>
                     <th>Grade</th>
                     <th>Action</th>
                 </tr>
