--- a/staff Dashboard/addStudent.html
+++ b/staff Dashboard/addStudent.html
@@ -20,53 +20,47 @@
             border: none;
             cursor: pointer;
         }
-        #update-btn {
-            display: none; /* Initially hidden */
-        }
     </style>
 </head>
 
 <body>
-
-   
-
     <div class="container">
         <header>
             <div class="logo">
-                <h2 class="text-center">Add New Student</h2>
+                <h2 class="text-center">Add Marks</h2>
             </div>
         </header>
         
-        <form id="student-form" method="POST" action="add_student.php">
+        <form id="student-form">
             <div class="form-group">
                 <label for="index">Index Number:</label>
                 <div class="input-group">
-                    <input type="text" class="form-control" id="index" name="index_number" required placeholder="Enter index number" disabled>
-                    <button type="button" class="edit-btn"><i class="fas fa-edit"></i></button>
+                    <input type="text" class="form-control" id="index" required placeholder="Enter index number">
                 </div>
             </div>
             <div class="form-group">
-                <label for="name">Student Name:</label>
+                <label for="subject">Subject:</label>
                 <div class="input-group">
-                    <input type="text" class="form-control" id="name" name="name" required placeholder="Enter student name" disabled>
-                    <button type="button" class="edit-btn"><i class="fas fa-edit"></i></button>
+                    <input type="text" class="form-control" id="subject" required placeholder="Enter subject">
                 </div>
             </div>
             <div class="form-group">
-                <label for="class">Class:</label>
+                <label for="mark">Mark:</label>
                 <div class="input-group">
-                    <input type="text" class="form-control" id="class" name="class" required placeholder="Enter class" disabled>
-                    <button type="button" class="edit-btn"><i class="fas fa-edit"></i></button>
+                    <input type="number" class="form-control" id="mark" required placeholder="Enter mark">
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary btn-block">Add Student</button>
-            <button type="button" id="update-btn" class="btn btn-success btn-block mt-2">Update Details</button>
+            <div class="form-group">
+                <label for="grade">Grade:</label>
+                <div class="input-group">
+                    <input type="text" class="form-control" id="grade" required placeholder="Enter grade">
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary btn-block">Add Mark</button>
             <a href="/staff Dashboard/staff.html" class="btn btn-secondary mt-3 d-block text-center">Back to Dashboard</a>
         </form>
 
-        <div id="message" class="mt-3">
-            <!-- Message will be displayed here -->
-        </div>
+        <div id="message" class="mt-3"></div>
     </div>
 
     <footer>
@@ -74,28 +68,19 @@
     </footer>
 
     <script>
-        // Enable editing when clicking the edit button
-        document.querySelectorAll('.edit-btn').forEach(button => {
-            button.addEventListener('click', function () {
-                let inputField = this.previousElementSibling;
-                inputField.disabled = !inputField.disabled;
-                if (!inputField.disabled) {
-                    inputField.focus();
-                    document.getElementById('update-btn').style.display = "block"; // Show update button
-                }
-            });
-        });
-
-        // Handle updating student details
-        document.getElementById('update-btn').addEventListener('click', function() {
+        // Handle form submission for adding a new student
+        document.getElementById('student-form').addEventListener('submit', function(event) {
+            event.preventDefault(); 
+            
             const index = document.getElementById('index').value;
-            const name = document.getElementById('name').value;
-            const className = document.getElementById('class').value;
+            const subject = document.getElementById('subject').value;
+            const mark = document.getElementById('mark').value;
+            const grade = document.getElementById('grade').value;
 
             const messageDiv = document.getElementById('message');
-            messageDiv.innerHTML = `<div class="alert alert-info">Student details updated successfully!</div>`;
+            messageDiv.innerHTML = `<div class="alert alert-success">Student with Index ${index} added successfully!</div>`;
 
-            document.getElementById('update-btn').style.display = "none"; // Hide update button after updating
+            document.getElementById('student-form').reset();
         });
     </script>
 
